manifests/ingress-17b4.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "akskodey-17b4"
    labels:
        app: "akskodey-17b4"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: akskodey17b4-akskodey-17b4.cfa4f987fa1f4ceda371.westcentralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "akskodey-17b4"
                servicePort: 80
